[gd_scene load_steps=8 format=3 uid="uid://d7vtesn8fd2b"]

[ext_resource type="Script" path="res://Scripts/goomba.gd" id="1_focgb"]
[ext_resource type="Texture2D" uid="uid://b7plocd84hnk" path="res://Assets/Sprites/Enemies/Goomba_Dead.png" id="1_s12oq"]
[ext_resource type="Texture2D" uid="uid://s6piiq4u6vrh" path="res://Assets/Sprites/Enemies/Goomba_walk1.png" id="2_trwel"]
[ext_resource type="Texture2D" uid="uid://33bquk8kovlt" path="res://Assets/Sprites/Enemies/Goomba_walk2.png" id="3_xcoo8"]
[ext_resource type="AudioStream" uid="uid://dknrx7swi25xl" path="res://Assets/SFX/enemykilled.wav" id="5_kljmd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mjl5f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_s12oq")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_trwel")
}, {
"duration": 1.0,
"texture": ExtResource("3_xcoo8")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nd1uw"]
size = Vector2(8, 9)

[node name="Goomba" type="Area2D" groups=["enemy"]]
position = Vector2(0, -4)
collision_layer = 4
collision_mask = 88
script = ExtResource("1_focgb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mjl5f")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_nd1uw")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(0, 5)
collision_mask = 18

[node name="RayCast2DSideL" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(-4, 0)
collision_mask = 18

[node name="RayCast2DSideR" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(4, 0)
collision_mask = 18

[node name="Enemykilled" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kljmd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(1.1, 0.55)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
